onesaithealthcare-cmc-chart/templates/alertmodule-back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alert-module
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: alert-module
  sessionAffinity: None
  type: ClusterIP
