onesaithealthcare-cmc-chart/templates/cmc-front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ohcmc-front
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: ohcmc-front
  sessionAffinity: None
  type: ClusterIP
