onesaithealthcare-cmc-chart/templates/cmc-mongodb-rest-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: restheart
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: restheart
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: restheart
