onesaithealthcare-cmc-chart/templates/cmc-rule-engine-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rule-engine-back
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: rule-engine
  sessionAffinity: None
  type: ClusterIP
