onesaithealthcare-cmc-chart/templates/alertmodule-back-virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: alert-module
spec:
  gateways:
    - oh-modules-gateway
  hosts:
    - '*'
  http:
    - headers:
        response:
          set:
            Referrer-Policy: origin
      match:
        - uri:
            prefix: /alert-module
      route:
        - destination:
            host: alert-module
            port:
              number: 8080
